--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Convert workspace path for Docker
         run: |
-          $cleanPath = "${{ github.workspace }}" -replace '\\','/'
+          $cleanPath = "${{ github.workspace }}" -replace '\\','/' -replace '^[A-Z]:', ''
           echo "DOCKER_WORKSPACE=$cleanPath" >> $env:GITHUB_ENV
           echo "Workspace path: $cleanPath"
         shell: pwsh
@@ -48,7 +48,7 @@ jobs:
 
       - name: Convert workspace path for Docker
         run: |
-          $cleanPath = "${{ github.workspace }}" -replace '\\','/'
+          $cleanPath = "${{ github.workspace }}" -replace '\\','/' -replace '^[A-Z]:', ''
           echo "DOCKER_WORKSPACE=$cleanPath" >> $env:GITHUB_ENV
           echo "Workspace path: $cleanPath"
         shell: pwsh
@@ -68,7 +68,7 @@ jobs:
 
       - name: Convert workspace path for Docker
         run: |
-          $cleanPath = "${{ github.workspace }}" -replace '\\','/'
+          $cleanPath = "${{ github.workspace }}" -replace '\\','/' -replace '^[A-Z]:', ''
           echo "DOCKER_WORKSPACE=$cleanPath" >> $env:GITHUB_ENV
           echo "Workspace path: $cleanPath"
         shell: pwsh
