--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -126,22 +126,13 @@ jobs:
           }
         shell: pwsh
 
-      - name: Install zlib via vcpkg
+      - name: Set Windows SDK zlib paths
         run: |
-          if (-not (Test-Path "C:\vcpkg")) {
-            git clone https://github.com/Microsoft/vcpkg.git C:\vcpkg
-          }
-          C:\vcpkg\vcpkg install zlib:x64-windows
-          $env:VCPKG_ROOT = "C:\vcpkg"
-          echo "VCPKG_ROOT=C:\vcpkg" >> $env:GITHUB_ENV
-        shell: pwsh
-
-      - name: Set zlib include and lib paths
-        run: |
-          $inc = "C:\vcpkg\installed\x64-windows\include"
-          $lib = "C:\vcpkg\installed\x64-windows\lib"
-          echo "C_INCLUDE_PATH=$inc" >> $env:GITHUB_ENV
-          echo "LIB=$lib" >> $env:GITHUB_ENV
+          # Use Windows SDK's built-in zlib instead of vcpkg
+          $windowsSdkDir = "$env:WindowsSdkDir"
+          $windowsSdkVersion = "$env:WindowsSDKVersion"
+          echo "C_INCLUDE_PATH=$windowsSdkDir\include\$windowsSdkVersion\um" >> $env:GITHUB_ENV
+          echo "LIB=$windowsSdkDir\lib\$windowsSdkVersion\um\x64" >> $env:GITHUB_ENV
         shell: pwsh
 
       - name: Add MSVC lib path to LIB
@@ -196,22 +187,13 @@ jobs:
           }
         shell: pwsh
 
-      - name: Install zlib via vcpkg
+      - name: Set Windows SDK zlib paths
         run: |
-          if (-not (Test-Path "C:\vcpkg")) {
-            git clone https://github.com/Microsoft/vcpkg.git C:\vcpkg
-          }
-          C:\vcpkg\vcpkg install zlib:x64-windows
-          $env:VCPKG_ROOT = "C:\vcpkg"
-          echo "VCPKG_ROOT=C:\vcpkg" >> $env:GITHUB_ENV
-        shell: pwsh
-
-      - name: Set zlib include and lib paths
-        run: |
-          $inc = "C:\vcpkg\installed\x64-windows\include"
-          $lib = "C:\vcpkg\installed\x64-windows\lib"
-          echo "C_INCLUDE_PATH=$inc" >> $env:GITHUB_ENV
-          echo "LIB=$lib" >> $env:GITHUB_ENV
+          # Use Windows SDK's built-in zlib instead of vcpkg
+          $windowsSdkDir = "$env:WindowsSdkDir"
+          $windowsSdkVersion = "$env:WindowsSDKVersion"
+          echo "C_INCLUDE_PATH=$windowsSdkDir\include\$windowsSdkVersion\um" >> $env:GITHUB_ENV
+          echo "LIB=$windowsSdkDir\lib\$windowsSdkVersion\um\x64" >> $env:GITHUB_ENV
         shell: pwsh
 
       - name: Add MSVC lib path to LIB
